ncc/testsuite/positive/Issue-git-0133.n
public struct A
{
  public this(_ : int) { this() }
}

module Program
{
  Main() : void { }
}