ncc/testsuite/negative/Issue-1308.n
public class A
{
  public this(_ : int) {} // H: overload definition
  public this(_ : int, _ : int) {} // H: overload definition
}

class B : A {} // E: each overload has an error during call // E: wrong number of parameters in call, needed 2, got 0

module Program
{
  Main() : void {}
}